# btflow

./: .gitignore  LICENSE  Makefile  README.md  README_CN.md  pyproject.toml
.memory/: demo.json
btflow/: __init__.py  agent.py  core.py  decorators.py  logging.py  persistence.py  runtime.py  state.py
btflow-studio/: STARTUP.md
btflow-studio/frontend/: index.html  package-lock.json  package.json
btflow/context/: __init__.py  base.py  budgeted.py  builder.py
btflow/core/: __init__.py  agent.py  behaviour.py  composites.py  decorators.py  persistence.py  runtime.py  state.py  streaming.py  trace.py
btflow/llm/: __init__.py  auto.py  base.py
btflow/memory/: __init__.py  base.py  embedders.py  in_memory.py  ingest.py  memory.py  record.py  retriever.py  (+4 more)
examples/: brain_muscle_demo.py  chat_demo.py  gemini_chat_agent.py  gemini_demo.py  mcp_demo.py  mcp_http_demo.py  mcp_memory_agent.py  memory_agent.py  memory_agent_demo.py  memory_demo.py  mock_demo.py  multi_llm_cot.py  multi_llm_demo.py  rag_demo.py  react_demo.py  reflexion_demo.py  rl_step_demo.py  search_agent.py  search_demo_agent.py  step_demo.py  test_persistence.py  toolnode_demo.py  trace_demo.py  v0_demo.py  visualize_tree.py
scripts/: start-backend.sh  start-frontend.sh
tests/: test_agent.py  test_composites.py  test_context.py  test_core.py  test_decorator_unified.py  test_decorators.py  test_event_driven.py  test_filesystem_tools.py  test_mcp_client.py  test_mcp_memory_integration.py  test_mcp_transports.py  test_memory.py  test_memory_search.py  test_memory_semantic.py  test_memory_tools.py  test_messages.py  test_parser.py  test_persistence.py  test_persistence_defaults.py  test_react.py  test_reflexion.py  test_runtime.py  test_state.py  test_state_signal.py  test_studio_api.py  test_studio_converter.py  visualize_tree.py
(+112 files in other folders)
